# EasyFF

./: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
docs/: favorite_commands_sync_strategy.md  intro.md  temp.html
public/locales/en/: common.json  ffmpeg.json  home.json  tasks.json
public/locales/zh/: common.json  ffmpeg.json  home.json  tasks.json
scripts/: sign.sh  test-updater-upload.mjs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  shared.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/events/: mod.rs
src-tauri/src/services/: ffmpeg_sources.rs  mod.rs
src-tauri/src/storage/: favorite_commands.rs  ffmpeg_versions.rs  media_queue.rs  mod.rs  task_history.rs
src-tauri/src/task/: queue.rs
src/components/app/: FavoriteSyncBootstrap.tsx
src/components/auth/: UserMenu.tsx
src/components/cli-logs/: VirtualLogViewer.tsx
src/components/ffmpeg/: FfmpegRuntimeStatus.tsx
src/components/ui/: badge.tsx
src/components/ui-biz/: UploadButton.tsx  UploadDrag.tsx
src/components/ui-lab/: ellipsis-name.tsx
src/config/: app-navigation.tsx
src/hooks/: useUiStatus.ts
src/layout/: AuthLayout.tsx  Header.tsx  OnlineHelpDialog.tsx  RootPage.tsx
src/lib/: bridge.ts  desktop-auth.ts  file.ts  mediaTaskEvent.ts  mediaTaskQueue.ts  updater.ts
src/services/: favorite-sync.ts  task-history-api.ts  user-api.ts
src/stores/: favoriteSyncStore.ts  ffmpegStore.ts  settingsStore.ts
src/types/: global.d.ts  tasks.ts
(+10 files in other folders)
